--- a/gradle.properties
+++ b/gradle.properties
@@ -22,5 +22,9 @@ android.useAndroidX=true
 # Automatically convert third-party libraries to use AndroidX
 android.enableJetifier=false
 
+android.defaults.buildfeatures.buildconfig=true
+android.nonTransitiveRClass=true
+android.nonFinalResIds=true
+
 # Kotlin code style for this project: "official" or "obsolete":
 kotlin.code.style=official
